modified style css

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: cassandra
 Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
+Author: Florian
+Author URI: https://github.com/step21
 Description: Description
 Version: 1.0.0
 Tested up to: 5.4
