--- a/style.css
+++ b/style.css
@@ -1006,6 +1006,31 @@ body {
 	padding-left: var(--main-indent);
 }
 
+.site-header {
+	position: sticky;
+	position: -webkit-sticky;
+	top: 0;
+	background: var(--background-color);
+	z-index: 1;
+	padding-bottom: .25em;
+	margin-left: -3em;
+	padding-left: 3em;
+}
+
+.site-title {
+	display: block;
+	font-size: 2em;
+	line-height: .8em;
+	padding-top: .5em;
+	margin-bottom: .5em;
+	transition: font-size .2s;
+}
+
+.site-title a {
+	text-decoration: none;
+	font-weight: 100;
+}
+
 @media screen and (min-width: 600px) {
 	.site-title.big {
 		font-size: 6em;
